--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
+  "name": "recipelib-frontend",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build"
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint ."
   },
   "dependencies": {
     "next": "latest",
@@ -12,6 +16,13 @@
   "devDependencies": {
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "eslint": "^8.13.0",
+    "eslint-config-next": "^12.1.5",
+    "eslint-config-prettier": "^8.5.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.4.0",
+    "prettier": "^2.6.2",
     "typescript": "^4.6.3"
   }
 }
