--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint ."
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.8.8",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-hook-form": "^7.30.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^17.0.25",
