--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint ."
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@hookform/resolvers": "^2.8.8",
+    "@mui/icons-material": "^5.8.0",
     "next": "latest",
-    "react": "^17.0.2",
     "react-hook-form": "^7.30.0",
     "react-responsive": "^9.0.0-beta.6",
     "ua-parser-js": "^1.0.2",
