--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@hookform/resolvers": "^2.8.8",
+    "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.0",
     "next": "latest",
     "react": "^17.0.2",
