--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint .",
-    "test": "jest"
+    "test": "jest",
+    "test-coverage": "jest --config=jest.config.coverage.js"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -30,10 +31,12 @@
     "@types/react": "^18.0.6",
     "@types/ua-parser-js": "^0.7.36",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "babel-jest": "^28.1.0",
     "eslint": "^8.13.0",
     "eslint-config-next": "^12.1.5",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^7.0.4",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "lint-staged": "^12.4.0",
