--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^2.8.8",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.0",
+    "material-ui-search-bar": "^1.0.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.0",
