--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint .",
     "test": "jest",
+    "test:e2e": "jest __tests__/e2e",
     "test-coverage": "jest --config=jest.config.coverage.js"
   },
   "dependencies": {
@@ -17,6 +18,7 @@
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.0",
     "next": "latest",
+    "puppeteer": "^14.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.0",
     "react-hook-form": "^7.30.0",
